# dex2_0

./: .prettierignore  .prettierrc  AMM_TRANSFER_HOOK_IMPLEMENTATION.md  Anchor.toml  App.tsx  DEVNET_DEPLOYMENT_GUIDE.md  DYNAMIC_IMPORT_FIX.md  LAUNCHPAD_TESTING_GUIDE.md  LAUNCH_SUMMARY.md  RATE_LIMITING_FIX.md  README.md  REAL_AMM_INTEGRATION_SUMMARY.md  TESTING_GUIDE.md  TOKEN_2022_VERIFICATION.md  WALLET_AUTH_FIX.md  app.json  eas.json  eslint.config.js  index.js  metro.config.js  package-lock.json  package.json  pnpm-workspace.yaml  polyfill.js
android/: settings.gradle
android/app/: build.gradle
app/: +not-found.tsx  _layout.tsx  receive.tsx  send.tsx  sign-in.tsx  swap.tsx  token2022-test.tsx  welcome.tsx
app/(tabs)/: _layout.tsx  index.tsx  (+8 more)
components/: ErrorBoundary.tsx  NotificationButton.tsx  NotificationModal.tsx  OnboardingScreen.tsx  Token2022LiquidityTestComponent.tsx  TokenIcon.tsx  VideoModeToggle.tsx  app-dropdown.tsx  app-external-link.tsx  app-navigation-guard.tsx  app-page.tsx  app-providers.tsx  app-qr-code.tsx  app-splash-controller.ts  app-text.tsx  app-theme.tsx  app-view.tsx
constants/: app-config.ts  colors.ts  devnet-config.ts  network-config.ts
docs/: README.md  architecture.md  auth-token-debugging.md  development.md  getting-started.md  rpc-timeout-fixes.md
hooks/: use-color-scheme.ts  use-color-scheme.web.ts  use-theme-color.ts  use-track-locations.ts
ios/: Podfile
programs/amm/: Cargo.toml
programs/amm/src/: lib.rs
scripts/: build-for-launch.bat  build-for-launch.sh
utils/: ellipsify.ts  lamports-to-sol.ts
(+91 files in other folders)
